add deck/kitchen photos, add new pergolas category

--- a/deck-pergolas.html
+++ b/deck-pergolas.html
@@ -68,10 +68,34 @@ Increase your property value with a long lasting and maintenance-free deck/pergo
           </div> -->
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/new-deck-floorplan.png" alt="New Deck Floorplan">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/DJI_0140.JPG" alt="Drone Shot of Backyard Deck Addition">
-            <img class="our-work-image" src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Spacious Backyard Deck Addition">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Spacious Backyard Deck Addition">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/pp13.jpg" alt="Multilevel Deck">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/Night-1.jpg" alt="Deck with Stair Lights">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/backyard-deck.png" alt="Backyard Deck">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/brown-deck-black-railings.png" alt="Brown Deck with Black Railings">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/dark-wood-finish-deck.png" alt="Deck with Dark Wood Finish">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-railings.png" alt="Deck Railings">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-railings-2.png" alt="Deck Railings 2">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-stairs-with-lights-daytime.png" alt="Deck Stairs with Lights During the Day">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-stairs-with-lights.png" alt="Deck Stairs with Lights">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-unfinished-wood.png" alt="Deck with Unfinished Wood">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-with-unifinished-wood.png" alt="Deck with Unfinished Wood 2">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-with-inground-pool.png" alt="Deck with Inground Pool">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-with-lights.png" alt="New Deck Renovation with Lights">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-with-modern-railings.png" alt="Deck with Modern Railings">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/gray-deck-stairs.png" alt="Gray Deck Stairs">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/gray-deck-white-railings.png" alt="Gray Deck with White Railings">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/gray-deck-with-stairs.png" alt="Gray Deck Stairs">
+
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/large-backyard-deck.png" alt="Large Backyard Deck">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/new-furnished-deck-renovation.png" alt="New Furnished Deck Renovation">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/overhead-deck-renovation.png" alt="Overhead View of Deck Renovation">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/tall-gray-deck.png" alt="Tall Gray Deck">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/wraparound-deck-renovation.png" alt="Wraparound Deck Renovation">
+
+
           </div>
       </div>
     </div>
