--- a/index.html
+++ b/index.html
@@ -100,10 +100,18 @@
       </div>
       <div class="service-card mr-20">
         <div class="service-card-header">
-          <h3><a href="/deck-pergolas.html">Decks & Pergolas</a></h3>
+          <h3><a href="/deck-pergolas.html">Decks</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Decks & Pergolas">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Decks">
+        </div>
+      </div>  
+      <div class="service-card mr-20">
+        <div class="service-card-header">
+          <h3><a href="/pergolas.html">ergolas</a></h3>
+        </div>
+        <div class="service-card-image">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p1.jpg" alt="Pergolas">
         </div>
       </div>  
       <div class="service-card">
