--- a/kitchen-renovations.html
+++ b/kitchen-renovations.html
@@ -86,6 +86,15 @@
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Kitchen Renovation Island">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="Full Service Kitchen Renovation">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/Grundy-2.jpg" alt="Before & After Kitchen">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/gray-backsplash.png" alt="Gray Backsplash Kitchen Renovation">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/gray-backsplash-2.png" alt="Gray Backsplash Kitchen Renovation">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/gray-backsplash-full-renovation.png" alt="Gray Backsplash Kitchen Renovation Full">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/new-faucet-white-countertops.png" alt="New Faucet and White Countertops">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/new-faucet-close.png" alt="Up Close New Faucet">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/backsplash-tile.png" alt="New Tile Backsplash Kitchen Renovation">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/full-kitchen-renovation.png" alt="Full Kitchen Renovation">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/dining-room-renovation.png" alt="Dining Room Renovation">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/white-backsplash-kitchen-renovation.png" alt="White Backsplash and Countertops Kitchen Renovation">
           </div>
       </div>
     </div>
