separate ext. remodeling sections into 2 rows

--- a/index.html
+++ b/index.html
@@ -82,47 +82,52 @@
       </div>  
      </div> 
      <div id="main-content-service-cards-exterior" class="hidden">
-      <div class="service-card mr-20">
-        <div class="service-card-header">
-          <h3><a href="/fencing.html">Fences</a></h3>
-        </div>
-        <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/fence.png" alt="Fencing">
-        </div>
+      <div class="service-card-row">
+        <div class="service-card mr-20">
+            <div class="service-card-header">
+              <h3><a href="/fencing.html">Fences</a></h3>
+            </div>
+            <div class="service-card-image">
+              <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/fence.png" alt="Fencing">
+            </div>
+          </div>
+          <div class="service-card mr-20">
+            <div class="service-card-header">
+              <h3><a href="/roofing.html">Roofing</a></h3>
+            </div>
+            <div class="service-card-image">
+              <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Roofing">
+            </div>
+          </div>
+          <div class="service-card mr-20">
+            <div class="service-card-header">
+              <h3><a href="/deck-pergolas.html">Decks</a></h3>
+            </div>
+            <div class="service-card-image">
+              <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Decks">
+            </div>
+          </div>  
       </div>
-      <div class="service-card mr-20">
-        <div class="service-card-header">
-          <h3><a href="/roofing.html">Roofing</a></h3>
-        </div>
-        <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Roofing">
-        </div>
+      <div class="service-card-row">
+        <div class="service-card mr-20">
+            <div class="service-card-header">
+              <h3><a href="/pergolas.html">Pergolas</a></h3>
+            </div>
+            <div class="service-card-image">
+              <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p1.jpg" alt="Pergolas">
+            </div>
+          </div>  
+          <div class="service-card">
+            <div class="service-card-header">
+              <h3><a href="/siding.html">Siding</a></h3>
+            </div>
+            <div class="service-card-image">
+              <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="Siding">
+            </div>
+          </div> 
+         </div>
       </div>
-      <div class="service-card mr-20">
-        <div class="service-card-header">
-          <h3><a href="/deck-pergolas.html">Decks</a></h3>
-        </div>
-        <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Decks">
-        </div>
-      </div>  
-      <div class="service-card mr-20">
-        <div class="service-card-header">
-          <h3><a href="/pergolas.html">ergolas</a></h3>
-        </div>
-        <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p1.jpg" alt="Pergolas">
-        </div>
-      </div>  
-      <div class="service-card">
-        <div class="service-card-header">
-          <h3><a href="/siding.html">Siding</a></h3>
-        </div>
-        <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="Siding">
-        </div>
-      </div> 
-     </div> 
+      
 
      <div id="main-content-service-cards-new-construction" class="hidden">
       <div class="service-card mr-20">
