--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
      </div> 
      <div id="main-content-service-cards-exterior" class="hidden">
       <div class="service-card-row">
-        <div class="service-card mr-20">
+          <div class="service-card mr-20">
             <div class="service-card-header">
               <h3><a href="/fencing.html">Fences</a></h3>
             </div>
@@ -108,7 +108,7 @@
             </div>
           </div>  
       </div>
-      <div class="service-card-row">
+      <!-- <div class="service-card-row">
         <div class="service-card mr-20">
             <div class="service-card-header">
               <h3><a href="/pergolas.html">Pergolas</a></h3>
@@ -125,7 +125,7 @@
               <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="Siding">
             </div>
           </div> 
-      </div>
+      </div> -->
     </div>
       
 
