separate ext. remodeling sections into 2 rows

--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
       </div>  
      </div> 
      <div id="main-content-service-cards-exterior" class="hidden">
-      <div class="service-card-row">
           <div class="service-card mr-20">
             <div class="service-card-header">
               <h3><a href="/fencing.html">Fences</a></h3>
@@ -99,7 +98,7 @@
               <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Roofing">
             </div>
           </div>
-          <div class="service-card">
+          <div class="service-card mr-20">
             <div class="service-card-header">
               <h3><a href="/deck-pergolas.html">Decks</a></h3>
             </div>
@@ -107,8 +106,6 @@
               <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Decks">
             </div>
           </div>  
-      </div>
-      <div class="service-card-row">
         <div class="service-card mr-20">
             <div class="service-card-header">
               <h3><a href="/pergolas.html">Pergolas</a></h3>
@@ -125,7 +122,6 @@
               <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="Siding">
             </div>
           </div> 
-      </div>
     </div>
       
 
