separate ext. remodeling sections into 2 rows

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Roofing">
             </div>
           </div>
-          <div class="service-card mr-20">
+          <div class="service-card mr">
             <div class="service-card-header">
               <h3><a href="/deck-pergolas.html">Decks</a></h3>
             </div>
