add siding sections

--- a/siding.html
+++ b/siding.html
@@ -21,20 +21,18 @@
 </div>
 <div class="subpage-content">
   <h2>Arrange for siding installation in Cedar Falls, IA</h2>
-    <div>
-        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/snap-photos.png" alt="Snap Photos">
-        <h2>Snap a Few Photos</h2>
-        <p>Using a mobile app to take 8 photos capturing each angle of your home.</p>
-    </div>
-    <div class="align-right">
-        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/receive-the-measurements.png" alt="Receive the Measurements">
-        <h2>Receive the Measurements</h2>
-        <p>Once the report is created we can see all measurements for roofing and siding</p>
-    </div>
-    <div>
-        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/design-in-3d.png" alt="Design in 3D">
-        <h2>Design in 3D</h2>
-        <p>Allow us to help visualize your house with both color and material and give you a free quote</p>
+    <div class="steps-container">
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/snap-photos.png" alt="Snap Photos">
+            <h2>Snap a Few Photos</h2>
+            <p>Using a mobile app to take 8 photos capturing each angle of your home.</p>
+
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/receive-the-measurements.png" alt="Receive the Measurements">
+            <h2>Receive the Measurements</h2>
+            <p>Once the report is created we can see all measurements for roofing and siding</p>
+
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/design-in-3d.png" alt="Design in 3D">
+            <h2>Design in 3D</h2>
+            <p>Allow us to help visualize your house with both color and material and give you a free quote</p>
     </div>
     <p>Have you grown to hate the appearance of your outdated siding? It’s time to replace it. T.E.A.M. Builders LTD specializes in siding installation and repair services in the Cedar Falls, IA area. 
     </p>
