add photos to our work page

--- a/exterior-remodeling.html
+++ b/exterior-remodeling.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="feature">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
-                  <a href="/deck-pergolas.html">Install a custom deck or patio</a>
+                  <a href="/decks.html">Install a custom deck or patio</a>
                 </div>
                 <div class="feature">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
