--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </div>
           <div class="service-card mr">
             <div class="service-card-header">
-              <h3><a href="/deck-pergolas.html">Decks</a></h3>
+              <h3><a href="/decks.html">Decks</a></h3>
             </div>
             <div class="service-card-image">
               <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Decks">
