--- a/our-work.html
+++ b/our-work.html
@@ -47,10 +47,20 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Kitchen Renovations</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="Kitchen Renovation Island">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Kitchen Renovation Island">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="Full Service Kitchen Renovation">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Before & After Kitchen">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="New Kitchen Island">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Kitchen Renovation Island">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="Full Service Kitchen Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/Grundy-2.jpg" alt="Before & After Kitchen">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/gray-backsplash.png" alt="Gray Backsplash Kitchen Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/gray-backsplash-2.png" alt="Gray Backsplash Kitchen Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/gray-backsplash-full-renovation.png" alt="Gray Backsplash Kitchen Renovation Full">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/new-faucet-white-countertops.png" alt="New Faucet and White Countertops">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/new-faucet-close.png" alt="Up Close New Faucet">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/backsplash-tile.png" alt="New Tile Backsplash Kitchen Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/full-kitchen-renovation.png" alt="Full Kitchen Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/dining-room-renovation.png" alt="Dining Room Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/white-backsplash-kitchen-renovation.png" alt="White Backsplash and Countertops Kitchen Renovation">
+    
               </div>
             </div>
           </div>
@@ -63,7 +73,6 @@
             <div class="our-work-accordion" data-accordion>
               <div data-control>Fences</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Fence">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/final-fence.png" alt="Final Fence">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/nichols-fence.png" alt="Nichols Fence">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/1557250048495_fence_4.png" alt="Fence">
@@ -73,8 +82,6 @@
              <div data-control>Roofing</div>
               <div data-content>
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Clay Roof">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Roof 1">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Roof 2">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-3.jpg" alt="Roof 3">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roof 4">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roof 5">
@@ -84,12 +91,31 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Decks</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1561120026449_1561119976123_img_0390.jpg" alt="New Deck Renovation">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Overhead View of Deck">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0574.JPG" alt="Porch Deck">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Night View of Deck">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/team-builders-deck.png" alt="Large Backyard Multilevel Deck">
-              </div>
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/new-deck-floorplan.png" alt="New Deck Floorplan">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/DJI_0140.JPG" alt="Drone Shot of Backyard Deck Addition">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Spacious Backyard Deck Addition">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/pp13.jpg" alt="Multilevel Deck">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/Night-1.jpg" alt="Deck with Stair Lights">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/backyard-deck.png" alt="Backyard Deck">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/brown-deck-black-railings.png" alt="Brown Deck with Black Railings">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/dark-wood-finish-deck.png" alt="Deck with Dark Wood Finish">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-railings.png" alt="Deck Railings">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-railings-2.png" alt="Deck Railings 2">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-stairs-with-lights-daytime.png" alt="Deck Stairs with Lights During the Day">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-stairs-with-lights.png" alt="Deck Stairs with Lights">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-unfinished-wood.png" alt="Deck with Unfinished Wood">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-with-unifinished-wood.png" alt="Deck with Unfinished Wood 2">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-with-inground-pool.png" alt="Deck with Inground Pool">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-with-lights.png" alt="New Deck Renovation with Lights">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-with-modern-railings.png" alt="Deck with Modern Railings">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/gray-deck-stairs.png" alt="Gray Deck Stairs">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/gray-deck-white-railings.png" alt="Gray Deck with White Railings">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/gray-deck-with-stairs.png" alt="Gray Deck Stairs">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/large-backyard-deck.png" alt="Large Backyard Deck">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/new-furnished-deck-renovation.png" alt="New Furnished Deck Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/overhead-deck-renovation.png" alt="Overhead View of Deck Renovation">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/tall-gray-deck.png" alt="Tall Gray Deck">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/wraparound-deck-renovation.png" alt="Wraparound Deck Renovation">              </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Pergolas</div>
